hotfix-for-elto-main-page-bugs

--- a/New project 2/index.html
+++ b/New project 2/index.html
@@ -16,8 +16,8 @@
             <a href="#">Home</a>
             <a href="#">Story</a>
             <a href="#">Menu</a>
-            <a href="#">Our Udates</a>
-            <a href="#">Contact</a>
+            <a href="https://elto-blog-page.vercel.app/" target="_blank">Our Udates</a>
+            <a href="#footer">Contact</a>
         </nav>
         <div class="reservation">
             <button>Reservation</button>
@@ -112,7 +112,9 @@
         <div class="featured">
             <figure id="featured__content">
                 <div class="featured__content__animated__imgs">
-                    <img src="images/news/pablo-merchan-montes-Orz90t6o0e4-unsplash.jpg" alt="">
+                    <a href="https://elto-blog-page.vercel.app/" target="_blank">
+                        <img src="images/news/pablo-merchan-montes-Orz90t6o0e4-unsplash.jpg" alt="">
+                    </a>
                 </div>
                 <figcaption class="feature-caption">
                     <P class="feature-first-paragraph"><span class="features">featured</span></P>
@@ -121,7 +123,9 @@
             </figure>
             <figure id="featured__content">
                 <div class="featured__content__animated__imgs">
-                    <img src="images/news/stefan-johnson-xIFbDeGcy44-unsplash.jpg" alt="">
+                    <a href="https://elto-blog-page.vercel.app/" target="_blank">
+                        <img src="images/news/stefan-johnson-xIFbDeGcy44-unsplash.jpg" alt="">
+                    </a>
                 </div>
                 <figcaption class="feature-caption">
                     <P class="feature-first-paragraph"><span class="features">featured</span></P>
@@ -132,7 +136,9 @@
         <div class="promotions">
             <figure id="promotion-content">
                 <div class="promotion__content__animated__imgs">
-                    <img src="images/news/gilles-lambert-S_LhjpfIdm4-unsplash.jpg" alt="">
+                    <a href="https://elto-blog-page.vercel.app/" target="_blank">
+                        <img src="images/news/gilles-lambert-S_LhjpfIdm4-unsplash.jpg" alt="">
+                    </a>
                 </div>
                 <figcaption id="promotion__caption">
                    <P class="promotion-first-paragraph"><span class="blue">Promotions</span> <span class="p-date">8 april 2022</span></P> 
@@ -141,7 +147,9 @@
             </figure>
             <figure id="promotion-content">
                 <div class="promotion__content__animated__imgs">
-                    <img src="images/news/caroline-attwood-bpPTlXWTOvg-unsplash.jpg" alt="">
+                    <a href="https://elto-blog-page.vercel.app/" target="_blank">
+                        <img src="images/news/caroline-attwood-bpPTlXWTOvg-unsplash.jpg" alt="">
+                    </a>
                 </div>
                 <figcaption id="promotion__caption">
                    <P class="promotion-first-paragraph"><span class="black">News</span></P> 
@@ -150,7 +158,9 @@
             </figure>
             <figure id="promotion-content">
                 <div class="promotion__content__animated__imgs">
-                    <img src="images/news/louis-hansel-GiIiRV0FjwU-unsplash.jpg" alt="">
+                    <a href="https://elto-blog-page.vercel.app/" target="_blank">
+                        <img src="images/news/louis-hansel-GiIiRV0FjwU-unsplash.jpg" alt="">
+                    </a>
                 </div>
                 <figcaption id="promotion__caption">
                    <P class="promotion-first-paragraph"><span class="blue">Promotion</span> <span class="p-date">30 april 2022</span></P> 
