nav-directory-update

--- a/New project 2/index.html
+++ b/New project 2/index.html
@@ -13,7 +13,7 @@
         <label for="checkbox"><i class="fa-solid fa-bars" style="color: #0f0f10;"></i></label>
         <input type="checkbox" id="checkbox">
         <nav>
-            <a href="#">Home</a>
+            <a href="#main-header">Home</a>
             <a href="#">Story</a>
             <a href="#">Menu</a>
             <a href="https://elto-blog-page.vercel.app/" target="_blank">Our Udates</a>
