--- a/New project 2/index.html
+++ b/New project 2/index.html
@@ -16,7 +16,7 @@
             <a href="#main-header">Home</a>
             <a href="#">Story</a>
             <a href="#">Menu</a>
-            <a href="https://elto-blog-page.vercel.app/" target="_blank">Our Udates</a>
+            <a href="https://elto-blog-page.vercel.app/" target="_blank">Our Updates</a>
             <a href="#footer">Contact</a>
         </nav>
         <div class="reservation">
